--- a/introduction.html
+++ b/introduction.html
@@ -8,8 +8,17 @@
 </head>
 
 <body>
-    <img scr=竈門炭治郎2.jpg alt=first>
-    <img scr=C:\Users\user\Desktop\git\try\program.jpg alt=second>
+    <h text-align: center>人物介紹</h><br>
+    <img src="image2/竈門炭治郎.jpg" width="400" height="600" "alt="炭治郎">
+    <img src="image2/竈門禰豆子.jpg" alt="彌豆子"><br>
+    <img src="image2/我妻善逸.jpg" alt="我妻善逸">
+    <img src="image2/伊支助.jpg" alt="伊支助"><br>
+    <img src="image2/栗花落香奈乎.jpg" alt="second">
+    <img src="image2/甘露寺蜜璃.jpg" alt="second"><br>
+    <img src="image2/胡蝶忍.jpg" alt="second">
+    <img src="image2/時透無一郎.jpg" alt="second"><br>
+    <img src="image2/富岡義勇.jpg" alt="second">
+    <img src="image2/珠世.jpg" alt="second"><br>
 </body>
 
 </html>
