--- a/introduction.html
+++ b/introduction.html
@@ -9,16 +9,28 @@
 
 <body>
     <h text-align: center>人物介紹</h><br>
-    <img src="image2/竈門炭治郎.jpg" width="400" height="600" "alt="炭治郎">
-    <img src="image2/竈門禰豆子.jpg" alt="彌豆子"><br>
-    <img src="image2/我妻善逸.jpg" alt="我妻善逸">
-    <img src="image2/伊支助.jpg" alt="伊支助"><br>
-    <img src="image2/栗花落香奈乎.jpg" alt="second">
-    <img src="image2/甘露寺蜜璃.jpg" alt="second"><br>
-    <img src="image2/胡蝶忍.jpg" alt="second">
-    <img src="image2/時透無一郎.jpg" alt="second"><br>
-    <img src="image2/富岡義勇.jpg" alt="second">
-    <img src="image2/珠世.jpg" alt="second"><br>
+    <table>
+        <tr>
+            <th><img src="image2/竈門炭治郎.jpg" width="400" "alt=" 炭治郎"></th>
+            <th><img src="image2/竈門禰豆子.jpg" width="400" alt="彌豆子"><br></th>
+        </tr>
+        <tr>
+            <th><img src="image2/我妻善逸.jpg" width="400" alt="我妻善逸"></th>
+            <th>    <img src="image2/伊支助.jpg" width="400" alt="伊支助"><br></th>
+        </tr>
+        <tr>
+            <img src="image2/栗花落香奈乎.jpg" width="400" alt="second">
+            <img src="image2/甘露寺蜜璃.jpg" width="400" alt="second"><br>
+        </tr>
+        <tr>
+            <img src="image2/胡蝶忍.jpg" width="400" alt="second">
+            <img src="image2/時透無一郎.jpg" width="400" alt="second"><br>
+        </tr>
+        <tr>
+            <img src="image2/富岡義勇.jpg" width="400" alt="second">
+            <img src="image2/珠世.jpg" width="400" alt="second"><br>
+        </tr>
+    </table>
 </body>
 
 </html>
