--- a/introduction.html
+++ b/introduction.html
@@ -12,8 +12,8 @@
     <table border=1>
 
         <tr>
-            <th><img src="image2/竈門炭治郎.jpg" width="200" "alt=" 炭治郎"></th>
-            <th><img src="image2/竈門禰豆子.jpg" width="200" alt="彌豆子"><br></th>
+            <th><img src="image2/竈門炭治郎.jpg" width="400" "alt=" 炭治郎"></th>
+            <th><img src="image2/竈門禰豆子.jpg" width="400" alt="彌豆子"><br></th>
         </tr>
         <tr>
             <th>本作漫畫中的主人公，因為家中某日突然遭鬼襲擊，妹妹因此變為鬼，為了尋找回復成人類的治療方法，成為鬼殺隊的一員並且踏上冒險之途。儘管如此，卻有著一顆溫柔善良的心，認為鬼也有善惡之分，常常對自己刀下所斬殺的鬼產生同情，可說是相當典型的主角人設，此外身上也藏著打敗最終魔王的秘密。
@@ -23,8 +23,8 @@
 
         </tr>
         <tr>
-            <th><img src="image2/我妻善逸.jpg" width="200" alt="我妻善逸"></th>
-            <th> <img src="image2/伊支助.jpg" width="200" alt="伊支助"><br></th>
+            <th><img src="image2/我妻善逸.jpg" width="400" alt="我妻善逸"></th>
+            <th> <img src="image2/伊之助.jpg" width="400" alt="伊之助"><br></th>
         </tr>
         <tr>
             <th>同樣有著相當多戲份，主角三人組之一的我妻善逸，性格卻也最膽小的一位，動不動就嚷嚷著自己要死了，但危急之際，卻又總是能以睡姿揮出精湛的劍術。雖然身為雷之呼吸使用者，卻只習得壹之型的霹靂一閃，但也將其練到爐火純青，威力非同小可。
@@ -35,8 +35,8 @@
 
         </tr>
         <tr>
-            <th><img src="image2/栗花落香奈乎.jpg" width="200" alt="香奈呼"></th>
-            <th><img src="image2/甘露寺蜜璃.jpg" width="200" alt="蜜璃"><br></th>
+            <th><img src="image2/栗花落香奈乎.jpg" width="400" alt="香奈呼"></th>
+            <th><img src="image2/甘露寺蜜璃.jpg" width="400" alt="蜜璃"><br></th>
         </tr>
         <tr>
             <th>漫畫中與炭治郎同期通過最終選拔的隊士，總是笑容滿面，但始終不發一語的沉默少女。隨著劇情推移才揭曉，因為悲慘的過去，導致她在溝通方面有困擾，思考上一板一眼常常不知該如何決定。同時也是網路上呼聲最高，希望與炭治郎成為一對的角色！
@@ -47,8 +47,8 @@
 
         </tr>
         <tr>
-            <th><img src="image2/胡蝶忍.jpg" width="200" alt="蝴蝶忍"></th>
-            <th><img src="image2/時透無一郎.jpg" width="200" alt="無一郎"><br></th>
+            <th><img src="image2/胡蝶忍.jpg" width="400" alt="蝴蝶忍"></th>
+            <th><img src="image2/時透無一郎.jpg" width="400" alt="無一郎"><br></th>
         </tr>
         <tr>
             <th>漫畫中唯一沒辦法將鬼腦袋斬下的柱，但卻是相對厲害的製毒師，使用蟲之呼吸以毒殺的方式擊敗各種鬼。平常總是笑臉迎人，卻被主角炭治郎發現背後藏著「生氣的味道」，追問之下得知因為親姐姐被鬼殺害，內心深處一直都憎恨著鬼。日本舉辦的第一回人氣投票結果中，也以1813高票獲得第6名。
@@ -56,8 +56,8 @@
             <th>鬼殺隊中年紀最小的柱，也是霞之呼吸的使用者，僅僅花兩個月就從隊士當上柱的天才。擁有強大的實力，卻因為喪失記憶的關係，平常總是望著天空發呆，呆萌的屬性反而意外受到不少粉絲喜愛。</th>
         </tr>
         <tr>
-            <th><img src="image2/富岡義勇.jpg" width="200" alt="義勇"></th>
-            <th><img src="image2/珠世.jpg" width="200" alt="珠世"><br></th>
+            <th><img src="image2/富岡義勇.jpg" width="400" alt="義勇"></th>
+            <th><img src="image2/珠世.jpg" width="400" alt="珠世"><br></th>
         </tr>
         <tr>
             <th>身為鬼殺隊水柱，使用與炭治郎一樣的水之呼吸，不只在相當早的時期就登場，也數度在千鈞一髮之際救下主角，冷酷的外表下卻相當講究義氣，甚至為了讓禰豆子活下來，不惜以自己的生命作為擔保。</th>
